# langgraph-research

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  main.py  model_config.json  model_config.json.example  progress.md  pyproject.toml
agentic_workflow/: graph.py
agentic_workflow/overleaf/: agent_config.py  graph.py  prompts.py
agentic_workflow/planning/: agent_config.py  graph.py  prompts.py  tools.py
agentic_workflow/refinement/: agent_config.py  graph.py  prompts.py  tools.py
agents/: graph.py  latex_builder.py
agents/overleaf/: agent_config.py  graph.py
agents/planning_agent/: agent_config.py  configuration.py  graph.py  prompts.py  tools.py
agents/refinement_agent/: agent_config.py  graph.py  prompts.py  tools.py
agents/shared/: main_config.py  state.py
cache/plans/: 0988bc8d-095c95bb-dae967dd-7afcb319.json  0bca4914-e5db5459-9bf93930-dfc5db20.json  146a70e2-280de90f-f97a2815-cb234e3c.json  1bfdb059-88b5ced1-90557a95-b402fe1f.json  22391e02-75269696-d549fdef-9633e140.json  2de6a7d3-fcd5bea1-a014fbb4-1fd23164.json  3aa6de71-dda82c74-7c594746-a07c6e5a.json  6fa1dbca-daded1cd-85617f20-b4ceaf7f.json  8ba825a4-9f8aba8f-21f1c7cc-5cda514f.json  930f0fa3-a078228d-e18ff5c6-51c9d8f7.json  (+5 more)
core/: main.py
docs/: gui_plan.md  progress.md  todos.md
graph_diagrams/: generate_diagrams.py  main_graph.mmd  overleaf_graph.mmd  planning_graph.mmd  refinement_graph.mmd
literature_review_agent/: configuration.py  custom_nodes.py  graph.py  prompts.py  state.py  tools.py  utils.py
literature_review_graph/: graph.py  state.py
shared/: state.py  utils.py
(+61 files in other folders)
