[project]
name = "langgraph-research"
version = "0.1.0"
description = "A research tool for automated literature review generation"
authors = [
    {name = "franciszek-latala",email = "Franciszek.Latala@crowe-peak.nl"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "langgraph (>=0.5.2,<0.6.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false